applications/react-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: react
  namespace: applications # Match your app's namespace
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`localhost`) && PathPrefix(`/react`)
      kind: Rule
      services:
        - name: react-app
          namespace: applications
          port: 8080
          scheme: http
          middlewares:
            - name: limit-client
